example/1-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: pod-1
spec:
    containers:
        - name: nginx-ct
          image: nginx:alpine
          ports:
            - containerPort: 80
