example/5-pod-with-probe.yml
apiVersion: v1
kind: Pod
metadata:
    name: pod-with-probe
    labels:
        team: infra
        version: 1.0.0
        environment: production
spec:
    containers:
        - name: nginx-ct
          image: nginx
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
                path: /test
                port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
