example/11-1-replicaset-multicontainer.yml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      name: nginx
    - port: 3000
      targetPort: 3000
      name: nodejs
